# noise-reduction-best-for-meeting

./: .gitignore  README.md
MicShieldDSP/: CMakeLists.txt  README.md
MicShieldDSP/config/: default_config.json  usb_virtual_cable_config.json
MicShieldDSP/docs/: architecture.md  dsp_pipeline.md  logging_policy.md
MicShieldDSP/include/micshield/app/: Application.hpp
MicShieldDSP/include/micshield/audio/: AudioDevice.hpp  AudioDeviceManager.hpp  AudioEngine.hpp  (+5 more)
MicShieldDSP/scripts/: Pause_MicShieldDSP.cmd  Resume_MicShieldDSP.cmd  Start_MicShieldDSP.cmd  Stop_MicShieldDSP.cmd  check_audio_setup.ps1  pause_background.ps1  resume_background.ps1  start_background.ps1  stop_background.ps1
MicShieldDSP/src/: main.cpp
MicShieldDSP/src/app/: Application.cpp
MicShieldDSP/src/audio/: AudioDeviceManager.cpp  AudioEngine.cpp  MiniaudioBackend.cpp  WindowsDefaultDeviceManager.cpp
MicShieldDSP/src/buffer/: AudioRingBuffer.cpp  SpscRingBuffer.cpp
MicShieldDSP/src/config/: ConfigLoader.cpp
MicShieldDSP/src/dsp/: BiquadFilter.cpp  Compressor.cpp  DCBlocker.cpp  DeEsser.cpp  DspChain.cpp  Expander.cpp  HighPassFilter.cpp  Limiter.cpp  NoiseEstimator.cpp  NoiseGate.cpp  NoiseReducer.cpp  NotchFilter.cpp  RmsMeter.cpp  VoiceActivityDetector.cpp
MicShieldDSP/src/io/: FileSystem.cpp  WavWriter.cpp
MicShieldDSP/src/logging/: Logger.cpp
MicShieldDSP/src/metrics/: PerformanceMeter.cpp
MicShieldDSP/src/utils/: MathUtils.cpp
MicShieldDSP/tests/: CMakeLists.txt  test_biquad.cpp  test_dc_blocker.cpp  test_limiter.cpp  test_ring_buffer.cpp  test_rms_meter.cpp
(+28 files in other folders)
